[TH2-1986] corrected according remarks